--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,6 @@
     },
     "extensions": [
         "vadimcn.vscode-lldb",
-        "matklad.rust-analyzer"
+        "rust-lang.rust-analyzer"
     ]
 }
